[tool.poetry]
name = "password-smelter"
version = "1.0.8"
description = "A password analyzer with pretty graphs and a dark mode"
authors = ["TheTechromancer"]
license = "GPL-3.0"
repository = "https://github.com/TheTechromancer/password-smelter"
homepage = "https://github.com/TheTechromancer/password-smelter"

[tool.poetry.scripts]
password-smelter = 'password_smelter.smelter:main'

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
dash = "^1.20.0"
plotly = "^4.14.3"
dash-bootstrap-components = "^0.12.0"
XlsxWriter = "^1.4.0"
psutil = "^5.8.0"
tabulate = "^0.8.9"
password-stretcher = "^1.0.4"
numpy = "^1.26.3"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
